# zca

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.5b10a78  README.md  backup_notes.txt
libs/cc/: .gitignore
libs/cc/src/cc/: CMakeLists.txt  bot_handshake_data.h  bot_id.cpp  bot_id.h  bot_readonly_data.h  bot_version.h  cc_bot.h  cc_bot_data.h  cc_bot_list.cpp  cc_bot_list.h  cc_client.cpp  cc_client.h  cc_client_bot_options.h  cc_client_cmd_disp_from_func.h  cc_client_command_dispatcher.h  cc_client_events.h  cc_client_events_from_func.h  cc_client_session.cpp  cc_client_session.h  cc_client_shared_data.h  cc_error.h  cc_server.cpp  cc_server.h  cc_server_events.h  cc_server_events_from_func.h  cc_server_session.cpp  cc_server_session.h  cc_session.cpp  cc_session.h  cc_user_data.h  find_bot_in_list.cpp  find_bot_in_list.h  make_random_bot_id.cpp  make_random_bot_id.h
libs/cc/src/cc/cc_proto/: all.h  codes.h  command_message.cpp  command_message.h  command_result_message.cpp  command_result_message.h  fire_message.cpp  fire_message.h  handshake_message.cpp  handshake_message.h  handshake_reply_message.cpp  handshake_reply_message.h  message_factory.cpp  message_factory.h  ping_message.cpp  ping_message.h  skipme_message.cpp  skipme_message.h
libs/cc/src/cc/test_kit/: client_proto_tester.cpp  client_proto_tester.h  client_proto_tester_runner.cpp  client_proto_tester_runner.h  server_proto_tester.cpp  server_proto_tester.h  server_proto_tester_runner.cpp  server_proto_tester_runner.h
libs/cc/src/cc/tests/: cc_test_table.cpp  test_cc_bot_id.cpp  test_cc_client_server.cpp  test_cc_client_server_zombie_kill.cpp  test_cc_proto_scenarios_cli.cpp  test_cc_proto_scenarios_srv.cpp
libs/cc/src/test_cc/: $session_list_bkg_checker.h  CMakeLists.txt  main.cpp
libs/co/: README.md  bugs.txt  dev.txt
libs/co/src/co/: CMakeLists.txt  common.cpp  common.h  common_config.h
libs/co/src/co/async/: cleanupable.h  client.cpp  client.h  create_for_endpoint.cpp  create_for_endpoint.h  event.cpp  event.h  event_waiter.cpp  event_waiter.h  fibered.h  hooking_stream.h  hooking_stream_acceptor.h  hooking_stream_connector.h  loop_object.h  loop_object_park.cpp  loop_object_park.h  loop_object_set.cpp  loop_object_set.h  process_io_redirector.cpp  process_io_redirector.h  rc4_stream.cpp  rc4_stream.h  read_write_all.cpp  read_write_all.h  server.cpp  server.h  service.h  session.cpp  session.h  session_park.h  startable_stopable.h  stop_timer.cpp  stop_timer.h  stream.h  stream_acceptor.cpp  stream_acceptor.h  stream_acceptor_factory.h  stream_chunk_error.h  (+31 more)
libs/co/src/samples_co/: CMakeLists.txt  main.cpp
libs/co/src/stresstest_co_listserver/: CMakeLists.txt  main.cpp
libs/co/src/stresstest_co_taskmgr/: CMakeLists.txt  main.cpp
libs/co/src/test_co/: CMakeLists.txt  main.cpp
libs/netshell/src/netshell/: CMakeLists.txt  get_serialized.h  netshell_default_config.h  netshell_error.h  netshell_exception.h  netshell_factory.cpp  netshell_factory.h  ns_cmd_result.cpp  ns_cmd_result.h  ns_para_command_executor.cpp  ns_para_command_executor.h  ns_para_command_result_writer_queue_st.cpp  ns_para_command_result_writer_queue_st.h  ns_result_type.h  ns_result_type_by_name.h  serializer.cpp  serializer.h  status_descriptor_table.h  textualizer.cpp  textualizer.h  unserializer.cpp  unserializer.h  untextualizer.cpp  untextualizer.h
libs/netshell/src/test_netshell/: CMakeLists.txt  main.cpp
libs/proto/src/proto/: CMakeLists.txt  proto_error.h  proto_message.h  proto_message_code.h  proto_message_dispatcher.h  proto_message_factory.h  proto_message_reader.cpp  proto_message_reader.h  proto_message_serializer.cpp  proto_message_serializer.h  proto_message_unserializer.cpp  proto_message_unserializer.h  proto_message_writer.cpp  proto_message_writer.h
libs/proto/src/test_proto/: CMakeLists.txt  main.cpp
libs/tabulate/samples/: movies.cpp
libs/vlan/src/test_vlan/: CMakeLists.txt  main.cpp  test_vlan.cpp  test_vlan_service_shutdown.cpp  vlan_test_table.cpp
libs/vlan/src/vlan/: CMakeLists.txt  vlan.cpp
libs/vlan/src/vlanbleed2/: CMakeLists.txt  test_co_async_services.cpp  test_vlan_service_shutdown.cpp  vlanbleed2_test_table.cpp
libs/zca/: README.md
libs/zca/src/samples_zca/: CMakeLists.txt  main.cpp
libs/zca/src/sslbleed/: CMakeLists.txt  ssl.cpp  ssl.h  sslbleed_test_table.cpp  test_ssl.cpp
libs/zca/src/sslbleed/detail/: error_message.cpp  mbedtls_bio.hpp  mbedtls_context.hpp  mbedtls_engine.hpp  mbedtls_error.hpp
libs/zca/src/sslbleed/detail/asio/ssl/: context_base.hpp  verify_mode.hpp
libs/zca/src/stresstest_zca_cmdexec/: CMakeLists.txt  main.cpp
libs/zca/src/stresstest_zca_fuzz/: CMakeLists.txt  main.cpp
libs/zca/src/test_zca/: CMakeLists.txt  main.cpp
libs/zca/src/testproject/: CMakeLists.txt  main.cpp
libs/zca/src/vlanbleed/: CMakeLists.txt  acceptor_impl.h  adapter.cpp  adapter.h  connected_streams2.h  connector_impl.h  emergency.h  emergency_info.h  endpoint.h  error.h  factories.cpp  factories.h  frame.h  handle.h  handle_context.h  handle_table.h  messages.cpp  messages.h  native_api.h  router.h  service.cpp  service.h  stream_impl.h  test_handle_table.cpp  test_vlan.cpp  test_vlan_handle_table.cpp  test_vlan_messages.cpp  transport.cpp  transport.h  vlan_common.h  vlan_kernel_config.cpp  vlan_kernel_config.h  vlan_read_write_all.h  vlanbleed.cpp  vlanbleed_test_table.cpp  vtester.cpp  vtester.h
libs/zca/src/zagent/: CMakeLists.txt  main.cpp
libs/zca/src/zbackend/: CMakeLists.txt  main.cpp
libs/zca/src/zbackfront/: CMakeLists.txt  daemonize.h  main.cpp
libs/zca/src/zca/: CMakeLists.txt  agent.h  agent_config.h  backend.h  backend_config.h  buildable.h  core_facade.h  frontend.h  frontend_config.h  netshell_status_descriptor_table.cpp  netshell_status_descriptor_table.h  triplet.cpp  triplet.h  zca_common_config.h
libs/zca/src/zcapsule/: CMakeLists.txt  main.cpp
libs/zca/src/zfront/: CMakeLists.txt  daemonize.cpp  main.cpp
libs/ztests/src/ztests/: CMakeLists.txt  main.cpp
libs/zunittests/src/zunittests/: CMakeLists.txt  main.cpp
(+370 files in other folders)
